--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <style>
+  body{
+    padding: 6px;
+  }
 h1,h2,h3,h4,a,*,p,body{
-font: monospace;
+font-family: monospace;
 color: green;
 background-color:black;
 transition: 2s;
