--- a/index.html
+++ b/index.html
@@ -16,3 +16,5 @@ color:red;
 <p> This webpage contains a wide variety of userscripts. </p>
 <h2> Loreum Ipsum </h2>
 <p> We are just testing our <a href = "#"> download </a> buttons. Sorry! </p>
+<h2>Download Glitch.com Christmas Dashboard(may cause bugs)</h2>
+<a href="https://github.com/order-of-the-browser/userscript-db/raw/master/glitchychristmas.user.css">Download Userstyle</a>
