--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ transition: 2s;
 h1:hover,h2:hover,h3:hover,h4:hover,a:hover,*:hover,p:hover{
 color:red;
 }
+
 </style>
 <h1> Userscript Browser </h1>
 <p> This webpage contains a wide variety of userscripts. </p>
@@ -18,3 +19,5 @@ color:red;
 <p> We are just testing our <a href = "#"> download </a> buttons. Sorry! </p>
 <h2>Download Glitch.com Christmas Dashboard(may cause bugs)</h2>
 <a href="https://github.com/order-of-the-browser/userscript-db/raw/master/glitchychristmas.user.css">Download Userstyle</a>
+<h2>Download Invert Glitch Dashboard</h2>
+<a href="https://github.com/order-of-the-browser/userscript-db/raw/master/glitchdotcom-dashboard-dark.user.css">Download Userstyle</a>
