--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@ color:red;
 </style>
 <h1> Userscript Browser </h1>
 <p> This webpage contains a wide variety of userscripts. </p>
-<h2> Loreum Ipsum </h2>
-<p> We are just testing our <a href = "#"> download </a> buttons. Sorry! </p>
+<h2> The site looks like it was made in 30 seconds </h2>
+<p> Yes lol, this was from a year ago when I didn't have as much web dev skills when I find time I'll update the page to be more modern. </p>
 <h2>Download Glitch.com Christmas Dashboard(may cause bugs)</h2>
 <a href="https://github.com/order-of-the-browser/userscript-db/raw/master/glitchychristmas.user.css">Download Userstyle</a>
 <h2>Download Invert Glitch Dashboard</h2>
 <a href="https://github.com/order-of-the-browser/userscript-db/raw/master/glitchdotcom-dashboard-dark.user.css">Download Userstyle</a>
+
+<h2>Download Alcumus AdBlock</h2>
+<a href="https://github.com/order-of-the-browser/userscript-db/raw/master/aops-alcumus-adblock.user.css">Download Userstyle</a>
+
+<h2>Download Alcumus Formatting Tips Remover</h2>
+<a href="https://github.com/order-of-the-browser/userscript-db/raw/master/aops-alcumus-no-format-tips.user.css">Download Userstyle</a>
